# nubemfeast

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml  deploy-production.yml  deploy-staging.yml  security.yml  staging-schedule.yml  sync-template.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  analysis.py  navigation.py  scans.py
backend/src/core/: __init__.py  config.py  database.py  dependencies.py
backend/src/models/: __init__.py  analysis.py  guide.py  image.py  scan.py
backend/src/repositories/: __init__.py  image_repository.py  scan_repository.py
backend/src/schemas/: __init__.py  analysis.py  enums.py  navigation.py  scan.py
backend/src/services/: __init__.py  guide_service.py  scan_service.py  vision_service.py  world_model_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_scans_api.py
backend/tests/unit/: test_world_model_service.py
docs/: ARCHITECTURE_DECISIONS.md  CONTRATO_TECNICO.md  DATA_MODELS.md  historico_commits.md
docs/agents/: Method-Master.md
docs/prompts/: dev.md  inicializacion.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/components/Upload/: ImageUploader.tsx
frontend/src/components/VirtualTour/: AlertOverlay.tsx  ImageViewer.tsx  InstructionPanel.tsx  NavigationControls.tsx  ProgressBar.tsx  VirtualTourViewer.tsx
frontend/src/hooks/: useAnalysis.ts  useGuide.ts  useScans.ts
frontend/src/pages/: HomePage.tsx  SummaryPage.tsx  TourPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: accessibility.ts
scripts/: check-ports.sh
specs/: CONTRATO_TECNICO.md  TASK_HISTORY.md
specs/api_contracts/: analysis.yaml  navigation.yaml  scans.yaml
